--- a/Proyecto final/index2.html
+++ b/Proyecto final/index2.html
@@ -63,28 +63,30 @@
         <footer>
             <fieldset>
                 <legend>¿Quieres contactar conmigo?</legend>
-                <button type="button" id="boton_ocultar">¿O quizá no?</button>
-                <form id="ocultar">
-                    <div>
-                        <label>Nombre y apellido</label>
-                        <input type="text" name="Nombre" placeholder="Ingrese su nombre" required>
-                    </div>
-                    <div>
-                        <label>E-mail</label>
-                        <input type="email" name="e-mail" placeholder="Ingrese su e-mail" required>
-                    </div>
-                    <div>
-                        <label>Asunto</label>
-                        <input type="text" name="Asunto" placeholder="Escribe tu asunto" required>
-                    </div>
-                    <div>
-                        <label>Mensaje</label>
-                        <textarea rows="5" cols="30"></textarea>
-                    </div>
-                    <div>
-                    <input type="submit">
-                    </div>
-                </form>
+                <button type="button" onclick="mostrar();" id="boton_mostrar">Te invito a hacerlo aquí</button>
+                <div id="mostrar">
+                    <form>
+                        <div>
+                            <label>Nombre y apellido</label>
+                            <input type="text" name="Nombre" placeholder="Ingrese su nombre" required>
+                        </div>
+                        <div>
+                            <label>E-mail</label>
+                            <input type="email" name="e-mail" placeholder="Ingrese su e-mail" required>
+                        </div>
+                        <div>
+                            <label>Asunto</label>
+                            <input type="text" name="Asunto" placeholder="Escribe tu asunto" required>
+                        </div>
+                        <div>
+                            <label>Mensaje</label>
+                            <textarea rows="5" cols="30"></textarea>
+                        </div>
+                        <div>
+                        <input type="submit">
+                        </div>
+                    </form>
+                </div>  
             </fieldset>
         </footer>
     </div>
