--- a/Proyecto final/index2.html
+++ b/Proyecto final/index2.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     <script src="js/function2.js"></script>
-    <div>
+    <div class="home">
         <img id="foto_carnet" src="https://randomuser.me/api/portraits/women/0.jpg">
         <h1>Carla Aguilar</h1>
         <p id="cargo">Front-end Developer</p>
         <p id="cargo">React.JS Developer</p>
-        <fieldset>
+        <fieldset class="in-flex">
             <legend>Datos generales</legend>
             <ul>
                 <li><span>Fecha de nacimiento:</span> 15/01/1990</li>
@@ -25,7 +25,7 @@
             </ul>
         </fieldset>
         
-        <fieldset>
+        <fieldset class="in-flex">
             <legend>Formación académica</legend>
             <ul>
                 <li>Bachiller especializado en informática. Fundación Educativa y Cultural Manuel de Falla (2012). Córdoba</li>
@@ -35,7 +35,7 @@
             </ul>
         </fieldset>
 
-        <fieldset>
+        <fieldset class="in-flex">
             <legend>Experiencia laboral</legend>
             <h4>Sooft Tech Rosario</h4>
             <img src="https://www.exportadoresdecordoba.com/images_db/logos/220px/17243_logo.jpg" alt="Sooft Córdoba"
@@ -61,7 +61,7 @@
         </fieldset>
 
         <footer>
-            <fieldset>
+            <fieldset class="in-flex">
                 <legend>¿Quieres contactar conmigo?</legend>
                 <button type="button" onclick="mostrar();" id="boton_mostrar">Te invito a hacerlo aquí</button>
                 <div id="mostrar">
